load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_binary", "pkg_npm")
load("//tools:typescript.bzl", "ts_build")

exports_files(
    ["tsconfig.json"],
    visibility = ["//:__subpackages__"],
)

OUTPUTS = {
    "commonjs": "es6",
    "umd": "es6",
    "es2015": "es6",
}

ts_build(
    name = "usv",
    outputs = OUTPUTS,
    srcs = ["index.ts"],
)

ts_project(
    name = "usv.types",
    srcs = ["index.ts"],
    declaration = True,
    emit_declaration_only = True,
    extends = ":tsconfig.json",
    tsconfig = {
        "compilerOptions": {
            "emitDeclarationOnly": True,
        },
    },
)

filegroup(
    name = "builds",
    srcs = [
        ":usv.commonjs",
        ":usv.es2015",
        ":usv.types",
        ":usv.umd",
    ],
)

js_library(
    name = "usv.lib",
    package_name = "usv",
    srcs = ["package.json"],
    deps = [
        ":usv.commonjs",
        ":usv.types",
    ],
)

ts_project(
    name = "example_ts",
    srcs = ["example.ts"],
    extends = "//:tsconfig.json",
    tsconfig = {
        "compilerOptions": {
            "declaration": False,
        },
    },
    deps = [":usv.lib"],
)

nodejs_binary(
    name = "example",
    data = [":example_ts"],
    entry_point = "example.ts",
)

filegroup(
    name = "source",
    srcs = [
        ":LICENSE",
        ":README.md",
        ":index.ts",
    ],
)

pkg_npm(
    name = "usv",
    package_name = "usv",
    srcs = ["package.json"],
    substitutions = {"0.0.0-PLACEHOLDER": "{PACKAGE_VERSION}"},
    deps = [
        ":builds",
        ":source",
    ],
)
